chart: support podsecuritypolicy
Signed-off-by: Kevin Lefevre <lefevre.kevin@gmail.com>

--- a/deploy/charts/cert-manager/cainjector/values.yaml
+++ b/deploy/charts/cert-manager/cainjector/values.yaml
@@ -10,6 +10,9 @@ global:
   rbac:
     create: true
 
+  podSecurityPolicy:
+    enabled: false
+
   leaderElection:
     # Override the namespace used to store the ConfigMap for leader election
     namespace: ""
