--- a/deploy/charts/cert-manager/templates/webhook-validating-webhook.yaml
+++ b/deploy/charts/cert-manager/templates/webhook-validating-webhook.yaml
@@ -11,13 +11,13 @@ metadata:
     helm.sh/chart: {{ include "webhook.chart" . }}
   annotations:
 {{- if .Values.webhook.injectAPIServerCA }}
-    certmanager.k8s.io/inject-apiserver-ca: "true"
+    injector.cert-manager.io/inject-apiserver-ca: "true"
 {{- end }}
 webhooks:
-  - name: webhook.certmanager.k8s.io
+  - name: webhook.cert-manager.io
     namespaceSelector:
       matchExpressions:
-      - key: "certmanager.k8s.io/disable-validation"
+      - key: "cert-manager.io/disable-validation"
         operator: "NotIn"
         values:
         - "true"
@@ -27,7 +27,7 @@ webhooks:
         - {{ .Release.Namespace }}
     rules:
       - apiGroups:
-          - "certmanager.k8s.io"
+          - "cert-manager.io"
         apiVersions:
           - v1alpha1
         operations:
@@ -44,5 +44,5 @@ webhooks:
       service:
         name: kubernetes
         namespace: default
-        path: /apis/webhook.certmanager.k8s.io/v1beta1/validations
+        path: /apis/webhook.cert-manager.io/v1beta1/validations
 {{- end -}}
