--- a/deploy/manifests/01-namespace.yaml
+++ b/deploy/manifests/01-namespace.yaml
@@ -3,6 +3,6 @@ kind: Namespace
 metadata:
   name: cert-manager
   labels:
-    certmanager.k8s.io/disable-validation: "true"
+    cert-manager.io/disable-validation: "true"
 
 ---
