--- a/docs/tutorials/acme/quick-start/example/ingress-tls-final.yaml
+++ b/docs/tutorials/acme/quick-start/example/ingress-tls-final.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kuard
   annotations:
     kubernetes.io/ingress.class: "nginx"    
-    certmanager.k8s.io/issuer: "letsencrypt-prod"
+    cert-manager.io/issuer: "letsencrypt-prod"
 
 spec:
   tls:
