--- a/docs/tutorials/acme/quick-start/example/production-issuer.yaml
+++ b/docs/tutorials/acme/quick-start/example/production-issuer.yaml
@@ -1,4 +1,4 @@
-   apiVersion: certmanager.k8s.io/v1alpha1
+   apiVersion: cert-manager.io/v1alpha1
    kind: Issuer
    metadata:
      name: letsencrypt-prod
