--- a/test/e2e/addon/tiller/BUILD.bazel
+++ b/test/e2e/addon/tiller/BUILD.bazel
@@ -1,19 +1,10 @@
-load("@io_bazel_rules_go//go:def.bzl", "go_binary")
-load("@io_bazel_rules_docker//go:image.bzl", "go_image")
+load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 
-# gazelle:ignore
-
-go_image(
+container_image(
     name = "image",
-    base = "@static_base//image",
-    binary = ":app",
+    base = "@io_gcr_helm_tiller//image",
+    tags = ["manual"],
     visibility = ["//visibility:public"],
-)
-
-go_binary(
-    name = "app",
-    embed = ["@org_letsencrypt_pebble//cmd/pebble:go_default_library"],
-    pure = "on",
 )
 
 filegroup(
