--- a/test/e2e/addon/vault/values.yaml
+++ b/test/e2e/addon/vault/values.yaml
@@ -1,6 +1,6 @@
 image:
-  repository: vault
-  tag: "bazel"
+  repository: bazel/test/e2e/addon/vault
+  tag: "v0.0.0-bazel"
 
 vault:
   publicKey:
