Add softlayer acme dns01 provider
Signed-off-by: Christian Groschupp <christian@groschupp.org>

--- a/pkg/issuer/acme/dns/BUILD.bazel
+++ b/pkg/issuer/acme/dns/BUILD.bazel
@@ -18,6 +18,7 @@ go_library(
         "//pkg/issuer/acme/dns/digitalocean:go_default_library",
         "//pkg/issuer/acme/dns/rfc2136:go_default_library",
         "//pkg/issuer/acme/dns/route53:go_default_library",
+        "//pkg/issuer/acme/dns/softlayer:go_default_library",
         "//pkg/issuer/acme/dns/util:go_default_library",
         "//pkg/issuer/acme/dns/webhook:go_default_library",
         "//pkg/logs:go_default_library",
@@ -71,6 +72,7 @@ filegroup(
         "//pkg/issuer/acme/dns/digitalocean:all-srcs",
         "//pkg/issuer/acme/dns/rfc2136:all-srcs",
         "//pkg/issuer/acme/dns/route53:all-srcs",
+        "//pkg/issuer/acme/dns/softlayer:all-srcs",
         "//pkg/issuer/acme/dns/util:all-srcs",
         "//pkg/issuer/acme/dns/webhook:all-srcs",
     ],
