Add v2 version to testgroup API
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/pkg/webhook/handlers/testdata/apis/testgroup/install/BUILD.bazel
+++ b/pkg/webhook/handlers/testdata/apis/testgroup/install/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//pkg/webhook/handlers/testdata/apis/testgroup:go_default_library",
         "//pkg/webhook/handlers/testdata/apis/testgroup/v1:go_default_library",
+        "//pkg/webhook/handlers/testdata/apis/testgroup/v2:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/util/runtime:go_default_library",
     ],
