--- a/pkg/webhook/handlers/testdata/apis/testgroup/v2/BUILD.bazel
+++ b/pkg/webhook/handlers/testdata/apis/testgroup/v2/BUILD.bazel
@@ -3,17 +3,24 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
+        "convert.go",
+        "defaults.go",
         "doc.go",
         "register.go",
         "types.go",
+        "zz_generated.conversion.go",
         "zz_generated.deepcopy.go",
+        "zz_generated.defaults.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/webhook/handlers/testdata/apis/testgroup",
+    importpath = "github.com/jetstack/cert-manager/pkg/webhook/handlers/testdata/apis/testgroup/v2",
     visibility = ["//visibility:public"],
     deps = [
+        "//pkg/webhook/handlers/testdata/apis/testgroup:go_default_library",
         "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
+        "@io_k8s_apimachinery//pkg/conversion:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime:go_default_library",
         "@io_k8s_apimachinery//pkg/runtime/schema:go_default_library",
+        "@io_k8s_utils//pointer:go_default_library",
     ],
 )
 
@@ -26,14 +33,7 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [
-        ":package-srcs",
-        "//pkg/webhook/handlers/testdata/apis/testgroup/fuzzer:all-srcs",
-        "//pkg/webhook/handlers/testdata/apis/testgroup/install:all-srcs",
-        "//pkg/webhook/handlers/testdata/apis/testgroup/v1:all-srcs",
-        "//pkg/webhook/handlers/testdata/apis/testgroup/v2:all-srcs",
-        "//pkg/webhook/handlers/testdata/apis/testgroup/validation:all-srcs",
-    ],
+    srcs = [":package-srcs"],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
