Adds vault issuer to e2e conformance tests
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/test/e2e/suite/conformance/certificates/BUILD.bazel
+++ b/test/e2e/suite/conformance/certificates/BUILD.bazel
@@ -33,6 +33,7 @@ filegroup(
         "//test/e2e/suite/conformance/certificates/acme:all-srcs",
         "//test/e2e/suite/conformance/certificates/ca:all-srcs",
         "//test/e2e/suite/conformance/certificates/selfsigned:all-srcs",
+        "//test/e2e/suite/conformance/certificates/vault:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
