--- a/test/e2e/suite/conformance/certificates/venafi/BUILD.bazel
+++ b/test/e2e/suite/conformance/certificates/venafi/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
     deps = [
         "//pkg/apis/certmanager/v1alpha1:go_default_library",
         "//test/e2e/framework:go_default_library",
+        "//test/e2e/framework/util/errors:go_default_library",
         "//test/e2e/suite/conformance/certificates:go_default_library",
         "//test/e2e/suite/issuers/venafi/addon:go_default_library",
         "//vendor/github.com/onsi/ginkgo:go_default_library",
