--- a/pkg/api/util/BUILD.bazel
+++ b/pkg/api/util/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
         "conditions.go",
         "duration.go",
         "issuers.go",
+        "names.go",
         "usages.go",
     ],
     importpath = "github.com/jetstack/cert-manager/pkg/api/util",
