--- a/test/e2e/suite/conformance/certificates/vault/BUILD.bazel
+++ b/test/e2e/suite/conformance/certificates/vault/BUILD.bazel
@@ -6,14 +6,13 @@ go_library(
     importpath = "github.com/jetstack/cert-manager/test/e2e/suite/conformance/certificates/vault",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/apis/certmanager/v1alpha1:go_default_library",
         "//test/e2e/framework:go_default_library",
         "//test/e2e/framework/addon/tiller:go_default_library",
         "//test/e2e/framework/addon/vault:go_default_library",
         "//test/e2e/suite/conformance/certificates:go_default_library",
-        "//vendor/github.com/onsi/ginkgo:go_default_library",
-        "//vendor/github.com/onsi/gomega:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
+        "@com_github_onsi_ginkgo//:go_default_library",
+        "@com_github_onsi_gomega//:go_default_library",
+        "@io_k8s_apimachinery//pkg/apis/meta/v1:go_default_library",
     ],
 )
 
