--- a/pkg/issuer/acme/dns/softlayer/BUILD.bazel
+++ b/pkg/issuer/acme/dns/softlayer/BUILD.bazel
@@ -2,15 +2,20 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "go_default_library",
-    srcs = ["softlayer.go"],
+    srcs = [
+        "mocks.go",
+        "softlayer.go",
+    ],
     importpath = "github.com/jetstack/cert-manager/pkg/issuer/acme/dns/softlayer",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/issuer/acme/dns/util:go_default_library",
+        "//vendor/github.com/jarcoal/httpmock:go_default_library",
         "//vendor/github.com/softlayer/softlayer-go/datatypes:go_default_library",
         "//vendor/github.com/softlayer/softlayer-go/filter:go_default_library",
         "//vendor/github.com/softlayer/softlayer-go/services:go_default_library",
         "//vendor/github.com/softlayer/softlayer-go/session:go_default_library",
+        "//vendor/github.com/stretchr/testify/assert:go_default_library",
     ],
 )
 
@@ -20,6 +25,7 @@ go_test(
     embed = [":go_default_library"],
     deps = [
         "//pkg/issuer/acme/dns/util:go_default_library",
+        "//vendor/github.com/jarcoal/httpmock:go_default_library",
         "//vendor/github.com/stretchr/testify/assert:go_default_library",
     ],
 )
