--- a/pkg/issuer/venafi/BUILD.bazel
+++ b/pkg/issuer/venafi/BUILD.bazel
@@ -3,7 +3,6 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
-        "issue.go",
         "setup.go",
         "venafi.go",
     ],
@@ -15,10 +14,6 @@ go_library(
         "//pkg/controller:go_default_library",
         "//pkg/internal/venafi:go_default_library",
         "//pkg/issuer:go_default_library",
-        "//pkg/logs:go_default_library",
-        "//pkg/util/pki:go_default_library",
-        "//vendor/github.com/Venafi/vcert/pkg/certificate:go_default_library",
-        "//vendor/github.com/Venafi/vcert/pkg/endpoint:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/client-go/listers/core/v1:go_default_library",
         "//vendor/k8s.io/klog:go_default_library",
@@ -41,10 +36,7 @@ filegroup(
 
 go_test(
     name = "go_default_test",
-    srcs = [
-        "issue_test.go",
-        "setup_test.go",
-    ],
+    srcs = ["setup_test.go"],
     embed = [":go_default_library"],
     deps = [
         "//pkg/apis/certmanager/v1alpha1:go_default_library",
@@ -52,11 +44,8 @@ go_test(
         "//pkg/controller/test:go_default_library",
         "//pkg/internal/venafi:go_default_library",
         "//pkg/internal/venafi/fake:go_default_library",
-        "//pkg/issuer:go_default_library",
         "//pkg/util:go_default_library",
-        "//pkg/util/pki:go_default_library",
         "//test/unit/gen:go_default_library",
-        "//vendor/github.com/Venafi/vcert/pkg/endpoint:go_default_library",
         "//vendor/k8s.io/client-go/listers/core/v1:go_default_library",
     ],
 )
