--- a/pkg/issuer/acme/dns/BUILD.bazel
+++ b/pkg/issuer/acme/dns/BUILD.bazel
@@ -45,7 +45,7 @@ go_test(
         "//pkg/issuer/acme/dns/digitalocean:go_default_library",
         "//pkg/issuer/acme/dns/route53:go_default_library",
         "//pkg/issuer/acme/dns/util:go_default_library",
-        "//test/util/generate:go_default_library",
+        "//test/unit/gen:go_default_library",
         "//vendor/k8s.io/api/core/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
