Wait for secret to contain cert for deletion e2e test
Signed-off-by: JoshVanL <vleeuwenjoshua@gmail.com>

--- a/test/e2e/framework/helper/BUILD.bazel
+++ b/test/e2e/framework/helper/BUILD.bazel
@@ -8,6 +8,7 @@ go_library(
         "helper.go",
         "kubectl.go",
         "pod_start.go",
+        "secret.go",
     ],
     importpath = "github.com/jetstack/cert-manager/test/e2e/framework/helper",
     tags = ["manual"],
