Refactor to use meta api group
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/pkg/apis/BUILD.bazel
+++ b/pkg/apis/BUILD.bazel
@@ -19,6 +19,7 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//pkg/apis/certmanager:all-srcs",
+        "//pkg/apis/meta:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
