--- a/pkg/internal/BUILD.bazel
+++ b/pkg/internal/BUILD.bazel
@@ -10,6 +10,7 @@ filegroup(
     srcs = [
         ":package-srcs",
         "//pkg/internal/apis/certmanager:all-srcs",
+        "//pkg/internal/apis/meta:all-srcs",
         "//pkg/internal/vault:all-srcs",
         "//pkg/internal/venafi:all-srcs",
     ],
