--- a/pkg/internal/apis/meta/v1/BUILD.bazel
+++ b/pkg/internal/apis/meta/v1/BUILD.bazel
@@ -9,17 +9,12 @@ go_library(
         "zz_generated.conversion.go",
         "zz_generated.defaults.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/internal/apis/certmanager/v1alpha2",
+    importpath = "github.com/jetstack/cert-manager/pkg/internal/apis/meta/v1",
     visibility = ["//pkg:__subpackages__"],
     deps = [
-        "//pkg/apis/certmanager:go_default_library",
-        "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/meta:go_default_library",
         "//pkg/apis/meta/v1:go_default_library",
-        "//pkg/internal/apis/certmanager:go_default_library",
         "//pkg/internal/apis/meta:go_default_library",
-        "//vendor/k8s.io/api/core/v1:go_default_library",
-        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1beta1:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/conversion:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
