Register meta api group with scheme
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/pkg/webhook/BUILD.bazel
+++ b/pkg/webhook/BUILD.bazel
@@ -11,6 +11,7 @@ go_library(
     deps = [
         "//pkg/internal/apis/certmanager/install:go_default_library",
         "//pkg/internal/apis/certmanager/validation:go_default_library",
+        "//pkg/internal/apis/meta/install:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
     ],
 )
