--- a/pkg/internal/apis/acme/BUILD.bazel
+++ b/pkg/internal/apis/acme/BUILD.bazel
@@ -5,18 +5,18 @@ go_library(
     srcs = [
         "doc.go",
         "register.go",
-        "types.go",
-        "types_certificate.go",
-        "types_certificaterequest.go",
+        "types_challenge.go",
         "types_issuer.go",
+        "types_order.go",
         "zz_generated.deepcopy.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/internal/apis/certmanager",
+    importpath = "github.com/jetstack/cert-manager/pkg/internal/apis/acme",
     visibility = ["//pkg:__subpackages__"],
     deps = [
-        "//pkg/apis/certmanager:go_default_library",
-        "//pkg/internal/apis/acme:go_default_library",
+        "//pkg/apis/acme:go_default_library",
         "//pkg/internal/apis/meta:go_default_library",
+        "//vendor/k8s.io/api/core/v1:go_default_library",
+        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1beta1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
@@ -34,10 +34,9 @@ filegroup(
     name = "all-srcs",
     srcs = [
         ":package-srcs",
-        "//pkg/internal/apis/certmanager/fuzzer:all-srcs",
-        "//pkg/internal/apis/certmanager/install:all-srcs",
-        "//pkg/internal/apis/certmanager/v1alpha2:all-srcs",
-        "//pkg/internal/apis/certmanager/validation:all-srcs",
+        "//pkg/internal/apis/acme/fuzzer:all-srcs",
+        "//pkg/internal/apis/acme/install:all-srcs",
+        "//pkg/internal/apis/acme/v1alpha2:all-srcs",
     ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
