--- a/pkg/internal/apis/acme/v1alpha2/BUILD.bazel
+++ b/pkg/internal/apis/acme/v1alpha2/BUILD.bazel
@@ -3,21 +3,22 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
+        "defaults.go",
         "doc.go",
         "register.go",
-        "types.go",
-        "types_certificate.go",
-        "types_certificaterequest.go",
-        "types_issuer.go",
-        "zz_generated.deepcopy.go",
+        "zz_generated.conversion.go",
+        "zz_generated.defaults.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/internal/apis/certmanager",
+    importpath = "github.com/jetstack/cert-manager/pkg/internal/apis/acme/v1alpha2",
     visibility = ["//pkg:__subpackages__"],
     deps = [
-        "//pkg/apis/certmanager:go_default_library",
+        "//pkg/apis/acme:go_default_library",
+        "//pkg/apis/acme/v1alpha2:go_default_library",
         "//pkg/internal/apis/acme:go_default_library",
-        "//pkg/internal/apis/meta:go_default_library",
+        "//vendor/k8s.io/api/core/v1:go_default_library",
+        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1beta1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/conversion:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
     ],
@@ -32,13 +33,7 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [
-        ":package-srcs",
-        "//pkg/internal/apis/certmanager/fuzzer:all-srcs",
-        "//pkg/internal/apis/certmanager/install:all-srcs",
-        "//pkg/internal/apis/certmanager/v1alpha2:all-srcs",
-        "//pkg/internal/apis/certmanager/validation:all-srcs",
-    ],
+    srcs = [":package-srcs"],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
