--- a/pkg/client/listers/acme/v1alpha2/BUILD.bazel
+++ b/pkg/client/listers/acme/v1alpha2/BUILD.bazel
@@ -3,16 +3,14 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
-        "certificate.go",
-        "certificaterequest.go",
-        "clusterissuer.go",
+        "challenge.go",
         "expansion_generated.go",
-        "issuer.go",
+        "order.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/client/listers/certmanager/v1alpha2",
+    importpath = "github.com/jetstack/cert-manager/pkg/client/listers/acme/v1alpha2",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/apis/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/acme/v1alpha2:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
         "//vendor/k8s.io/client-go/tools/cache:go_default_library",
