--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -49,6 +49,7 @@ filegroup(
         "//pkg/apis:all-srcs",
         "//pkg/client/clientset/versioned:all-srcs",
         "//pkg/client/informers/externalversions:all-srcs",
+        "//pkg/client/listers/acme/v1alpha2:all-srcs",
         "//pkg/client/listers/certmanager/v1alpha2:all-srcs",
         "//pkg/controller:all-srcs",
         "//pkg/feature:all-srcs",
