--- a/pkg/client/clientset/versioned/typed/acme/v1alpha2/BUILD.bazel
+++ b/pkg/client/clientset/versioned/typed/acme/v1alpha2/BUILD.bazel
@@ -3,25 +3,21 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
+        "acme_client.go",
+        "challenge.go",
         "doc.go",
-        "fake_certificate.go",
-        "fake_certificaterequest.go",
-        "fake_certmanager_client.go",
-        "fake_clusterissuer.go",
-        "fake_issuer.go",
+        "generated_expansion.go",
+        "order.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/client/clientset/versioned/typed/certmanager/v1alpha2/fake",
+    importpath = "github.com/jetstack/cert-manager/pkg/client/clientset/versioned/typed/acme/v1alpha2",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/apis/certmanager/v1alpha2:go_default_library",
-        "//pkg/client/clientset/versioned/typed/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/acme/v1alpha2:go_default_library",
+        "//pkg/client/clientset/versioned/scheme:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
         "//vendor/k8s.io/client-go/rest:go_default_library",
-        "//vendor/k8s.io/client-go/testing:go_default_library",
     ],
 )
 
@@ -34,7 +30,10 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [":package-srcs"],
+    srcs = [
+        ":package-srcs",
+        "//pkg/client/clientset/versioned/typed/acme/v1alpha2/fake:all-srcs",
+    ],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
