--- a/pkg/client/clientset/versioned/typed/acme/v1alpha2/fake/BUILD.bazel
+++ b/pkg/client/clientset/versioned/typed/acme/v1alpha2/fake/BUILD.bazel
@@ -4,17 +4,15 @@ go_library(
     name = "go_default_library",
     srcs = [
         "doc.go",
-        "fake_certificate.go",
-        "fake_certificaterequest.go",
-        "fake_certmanager_client.go",
-        "fake_clusterissuer.go",
-        "fake_issuer.go",
+        "fake_acme_client.go",
+        "fake_challenge.go",
+        "fake_order.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/client/clientset/versioned/typed/certmanager/v1alpha2/fake",
+    importpath = "github.com/jetstack/cert-manager/pkg/client/clientset/versioned/typed/acme/v1alpha2/fake",
     visibility = ["//visibility:public"],
     deps = [
-        "//pkg/apis/certmanager/v1alpha2:go_default_library",
-        "//pkg/client/clientset/versioned/typed/certmanager/v1alpha2:go_default_library",
+        "//pkg/apis/acme/v1alpha2:go_default_library",
+        "//pkg/client/clientset/versioned/typed/acme/v1alpha2:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/labels:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
