--- a/pkg/client/informers/externalversions/acme/v1alpha2/BUILD.bazel
+++ b/pkg/client/informers/externalversions/acme/v1alpha2/BUILD.bazel
@@ -3,21 +3,20 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library")
 go_library(
     name = "go_default_library",
     srcs = [
-        "factory.go",
-        "generic.go",
+        "challenge.go",
+        "interface.go",
+        "order.go",
     ],
-    importpath = "github.com/jetstack/cert-manager/pkg/client/informers/externalversions",
+    importpath = "github.com/jetstack/cert-manager/pkg/client/informers/externalversions/acme/v1alpha2",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/apis/acme/v1alpha2:go_default_library",
-        "//pkg/apis/certmanager/v1alpha2:go_default_library",
         "//pkg/client/clientset/versioned:go_default_library",
-        "//pkg/client/informers/externalversions/acme:go_default_library",
-        "//pkg/client/informers/externalversions/certmanager:go_default_library",
         "//pkg/client/informers/externalversions/internalinterfaces:go_default_library",
+        "//pkg/client/listers/acme/v1alpha2:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
-        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
         "//vendor/k8s.io/client-go/tools/cache:go_default_library",
     ],
 )
@@ -31,12 +30,7 @@ filegroup(
 
 filegroup(
     name = "all-srcs",
-    srcs = [
-        ":package-srcs",
-        "//pkg/client/informers/externalversions/acme:all-srcs",
-        "//pkg/client/informers/externalversions/certmanager:all-srcs",
-        "//pkg/client/informers/externalversions/internalinterfaces:all-srcs",
-    ],
+    srcs = [":package-srcs"],
     tags = ["automanaged"],
     visibility = ["//visibility:public"],
 )
