Use acmefuzzers during certmanager group roundtrip tests
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/pkg/internal/apis/certmanager/install/BUILD.bazel
+++ b/pkg/internal/apis/certmanager/install/BUILD.bazel
@@ -32,7 +32,9 @@ go_test(
     srcs = ["roundtrip_test.go"],
     embed = [":go_default_library"],
     deps = [
+        "//pkg/internal/apis/acme/fuzzer:go_default_library",
         "//pkg/internal/apis/certmanager/fuzzer:go_default_library",
+        "//vendor/k8s.io/apimachinery/pkg/api/apitesting/fuzzer:go_default_library",
         "//vendor/k8s.io/apimachinery/pkg/api/apitesting/roundtrip:go_default_library",
     ],
 )
